--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,120 @@
-html {
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;  
+    height: 100%;
+    font-family: sans-serif;
+    color: #252525;
+    background-color: white;
+}
+  
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h3, h4 {
+    margin: 3px;
+}
+
+a {
+    text-decoration: none;
+    color: #252525;
+}
+
+a:hover, a.active { 
+    font-weight: bold;
+}
+  
+.center {
+    text-align: center;
+}
+
+a.toggle {
+    cursor: pointer;
+}
+
+li {
+    list-style-type: none;
+}
+
+.nav {
+    overflow: hidden;
+}
+  
+.nav a {
+    float: left;
+    padding: 0 10px;
+}
+   
+.nav-right {
+    float: right;
+}
+
+.avatar {
+    height: 50px;
+    border-radius: 25px;
+    margin: 10px;
+}
+
+th, td {
+    padding: 3px;
+}
+
+.panel {
+    width: 100%;
+    max-width: 590px;
+    padding: 10px;
+    display: flex;
+    margin: 0 auto;
+    border: 1px solid #dad7d7;
+    border-radius: 3px;
+}
+
+.textarea {
+    border-radius: 4px;
+    border: 1px solid #dad7d7;
+    padding: 10px;
+    font-size: 15px;
+    height: 100px;
+}
+
+.new-question {
+    width: 100%;
+    max-width: 590px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.btn {
+    margin: 10px auto;
+    padding: 10px;
+    border: 1px solid rgba(0,0,0,.29);
+    cursor: pointer;
+    background: #fff;
+    font-size: 16px;
+    width: 250px;
+    position: relative;
+}
+  
+.btn:hover {
+    border-color: rgba(0,0,0,.5);
+    text-decoration: none;
+}
+  
+.btn:focus {
+    outline: 0;
+    font-weight: 700;
+    border-width: 2px;
+}
+
+.question-info {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+}
+/* Hacky but less typing in the video */
+.question-info > p {
+    font-size: 15px;
 }
